--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/**/index.js",
-      "!src/state/**"
+      "!src/**/index.js"
     ]
   }
 }
