--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/**/index.js"
+      "!src/**/index.js",
+      "!src/**/*.favs.js"
     ]
   }
 }
